# remittance-assistant

./: FLOW_3_QUOTE_GENERATION_COMPLETE.md  FLOW_4_TRANSACTION_COMPLETE.md  PRE_LAUNCH_CHECKLIST.md  PR_DESCRIPTION.md  PR_FLOWS_2_4_IMPLEMENTATION.md  QUICK_START_GUIDE.md  README.md  REMITTANCE_IMPLEMENTATION_SUMMARY.md  REMITTANCE_USER_JOURNEY.md  docker-compose.yml  ngrok-setup.md  replace-with-travel.sh  setup.sh  start-ngrok.sh  start.sh
backend/: .dockerignore  Dockerfile  README.md  SHONA_TEST_RESULTS.md  langgraph.json  pyproject.toml  test_shona_language.py  test_subgraphs.py  verify_mcp.py
backend/agent/: graph.py  tools.py
backend/agent/workflows/: __init__.py  base.py  card_issue.py  financial_insights.py  general_enquiry.py  loan_enquiry.py  refund.py  transaction_help.py
backend/app/: auth.py  context.py  main.py  sessions.py
backend/engine/: chat.py  demo.py  search.py  state.py  trips.py  workflow_router.py
backend/mcp_legacy/: tools.py
backend/utils/: mcp_client_utils.py
mcp-ecocash/: .dockerignore  README.md  claude_desktop_server.py  inspect_fastmcp.py  pyproject.toml  server.py  streamable_http_server.py
mcp-ecocash/src/: __init__.py  main.py
mcp-ecocash/src/api/: __init__.py
mcp-ecocash/src/auth/: manager.py
mcp-ecocash/src/config/: settings.py
mcp-ecocash/src/core/: __init__.py  server.py
mcp-ecocash/src/database/: __init__.py  client.py  tools.py
mcp-ecocash/src/monitoring/: health.py
mcp-ecocash/src/rag/: __init__.py  tools.py
mcp-ecocash/src/utils/: __init__.py  helpers.py
mcp-ecocash/src/wallet/: airtime.py  (+4 more)
(+104 files in other folders)
