[project]
name = "mcp-ecocash"
version = "1.0.0"
description = "MCP Server for EcoCash wallet operations"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "aiohttp>=3.8.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.13.0",
    "motor>=3.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
